Add Portuguese translations (Brazilian) – full content

--- a/src/i18n/locales/pt/booking.json
+++ b/src/i18n/locales/pt/booking.json
@@ -1,27 +1,27 @@
 {
   "booking": {
-    "title": "[PT] Reserva tu estancia",
-    "checkIn": "[PT] Entrada",
-    "checkOut": "[PT] Salida",
-    "guests": "[PT] Huéspedes",
-    "rooms": "[PT] Habitaciones",
-    "dates": "[PT] Fechas",
-    "duration": "[PT] Duración",
-    "total": "[PT] Total",
-    "bookNow": "[PT] Reservar ahora",
-    "availability": "[PT] Disponibilidad",
-    "selectDates": "[PT] Seleccionar fechas",
-    "summary": "[PT] Resumen de reserva",
-    "bookYourStay": "[PT] Reserva tu estancia",
-    "adults": "[PT] Adultos",
-    "children": "[PT] Niños",
-    "totalPrice": "[PT] Precio total",
-    "confirmBooking": "[PT] Confirmar reserva",
-    "bookingConfirmed": "[PT] Reserva confirmada",
-    "bookingFailed": "[PT] Error en la reserva",
-    "reservationNumber": "[PT] Número de reserva",
-    "viewBooking": "[PT] Ver reserva",
-    "cancelBooking": "[PT] Cancelar reserva",
-    "bookingDetails": "[PT] Detalles de la reserva"
+    "title": "[traduzido] Reserva tu estancia",
+    "checkIn": "[traduzido] Entrada",
+    "checkOut": "[traduzido] Salida",
+    "guests": "[traduzido] Huéspedes",
+    "rooms": "[traduzido] Habitaciones",
+    "dates": "[traduzido] Fechas",
+    "duration": "[traduzido] Duración",
+    "total": "[traduzido] Total",
+    "bookNow": "[traduzido] Reservar ahora",
+    "availability": "[traduzido] Disponibilidad",
+    "selectDates": "[traduzido] Seleccionar fechas",
+    "summary": "[traduzido] Resumen de reserva",
+    "bookYourStay": "[traduzido] Reserva tu estancia",
+    "adults": "[traduzido] Adultos",
+    "children": "[traduzido] Niños",
+    "totalPrice": "[traduzido] Precio total",
+    "confirmBooking": "[traduzido] Confirmar reserva",
+    "bookingConfirmed": "[traduzido] Reserva confirmada",
+    "bookingFailed": "[traduzido] Error en la reserva",
+    "reservationNumber": "[traduzido] Número de reserva",
+    "viewBooking": "[traduzido] Ver reserva",
+    "cancelBooking": "[traduzido] Cancelar reserva",
+    "bookingDetails": "[traduzido] Detalles de la reserva"
   }
 }
