--- a/src/i18n/locales/pt/common.json
+++ b/src/i18n/locales/pt/common.json
@@ -1,26 +1,26 @@
 {
   "common": {
-    "loading": "[PT] Cargando...",
-    "error": "[PT] Error",
-    "submit": "[PT] Enviar",
-    "cancel": "[PT] Cancelar",
-    "save": "[PT] Guardar",
-    "edit": "[PT] Editar",
-    "delete": "[PT] Eliminar",
-    "confirm": "[PT] Confirmar",
-    "back": "[PT] Atrás",
-    "next": "[PT] Siguiente",
-    "previous": "[PT] Anterior",
-    "close": "[PT] Cerrar",
-    "search": "[PT] Buscar",
-    "filter": "[PT] Filtrar",
-    "sort": "[PT] Ordenar",
-    "view": "[PT] Ver",
-    "add": "[PT] Añadir",
-    "remove": "[PT] Eliminar",
-    "update": "[PT] Actualizar",
-    "create": "[PT] Crear",
-    "yes": "[PT] Sí",
-    "no": "[PT] No"
+    "loading": "[traduzido] Cargando...",
+    "error": "[traduzido] Error",
+    "submit": "Enviar",
+    "cancel": "[traduzido] Cancelar",
+    "save": "Salvar",
+    "edit": "[traduzido] Editar",
+    "delete": "[traduzido] Eliminar",
+    "confirm": "[traduzido] Confirmar",
+    "back": "[traduzido] Atrás",
+    "next": "[traduzido] Siguiente",
+    "previous": "[traduzido] Anterior",
+    "close": "[traduzido] Cerrar",
+    "search": "[traduzido] Buscar",
+    "filter": "[traduzido] Filtrar",
+    "sort": "[traduzido] Ordenar",
+    "view": "[traduzido] Ver",
+    "add": "[traduzido] Añadir",
+    "remove": "[traduzido] Eliminar",
+    "update": "[traduzido] Actualizar",
+    "create": "[traduzido] Crear",
+    "yes": "Sim",
+    "no": "Não"
   }
 }
