--- a/src/i18n/locales/pt/dashboard/content.json
+++ b/src/i18n/locales/pt/dashboard/content.json
@@ -1,34 +1,34 @@
 {
   "dashboard": {
-    "recentReviews": "[PT] Opiniones Recientes",
-    "noReviews": "[PT] Aún no hay opiniones",
-    "noReviewsMessage": "[PT] Las opiniones de sus huéspedes aparecerán aquí una vez que dejen sus comentarios sobre sus propiedades.",
-    "recentBookings": "[PT] Reservas Recientes",
-    "noBookings": "[PT] Aún no hay reservas",
-    "noBookingsMessage": "[PT] Las reservas aparecerán aquí cuando los huéspedes realicen sus reservas.",
-    "addNewProperty": "[PT] Añadir una Propiedad",
-    "approved": "[PT] Aprobado",
-    "pending": "[PT] Pendiente",
-    "rejected": "[PT] Rechazado",
-    "guestManagement": "[PT] Gestión de Huéspedes",
-    "noGuestData": "[PT] Aún no hay datos de huéspedes",
-    "noGuestDataMessage": "[PT] La información de los huéspedes aparecerá aquí una vez que usted reciba reservas.",
-    "messagesFromAdmin": "[PT] Mensajes del Administrador",
-    "noMessagesYet": "[PT] Aún no hay mensajes",
-    "noMessagesMessage": "[PT] Todavía no ha recibido mensajes del administrador de la plataforma.",
-    "financialOverview": "[PT] Resumen Financiero",
-    "financialDataMessage": "[PT] Sus datos financieros e historial de transacciones aparecerán aquí una vez que tenga reservas.",
-    "analyticsTitle": "[PT] Análisis",
-    "welcomeToHotelLiving": "[PT] ¡Bienvenido a Hotel-Living!",
-    "welcomeMessage": "[PT] Gracias por registrarte como socio hotelero. Para comenzar, añade tu primera propiedad usando la opción \"Añadir Propiedad\" abajo.",
-    "quickActions": "[PT] Acciones Rápidas",
-    "addPropertyAction": "[PT] Añadir Propiedad",
-    "addPropertyDescription": "[PT] Registrar un nuevo hotel o apartamento.",
-    "viewBookings": "[PT] Ver Reservas",
-    "viewBookingsDescription": "[PT] Gestionar reservas futuras y pasadas.",
-    "viewAnalytics": "[PT] Ver Análisis",
-    "viewAnalyticsDescription": "[PT] Consultar métricas detalladas de rendimiento.",
-    "manageReviews": "[PT] Gestionar Opiniones",
-    "manageReviewsDescription": "[PT] Responder a los comentarios de los huéspedes."
+    "recentReviews": "[traduzido] Opiniones Recientes",
+    "noReviews": "[traduzido] Aún no hay opiniones",
+    "noReviewsMessage": "[traduzido] Las opiniones de sus huéspedes aparecerán aquí una vez que dejen sus comentarios sobre sus propiedades.",
+    "recentBookings": "[traduzido] Reservas Recientes",
+    "noBookings": "[traduzido] Aún no hay reservas",
+    "noBookingsMessage": "[traduzido] Las reservas aparecerán aquí cuando los huéspedes realicen sus reservas.",
+    "addNewProperty": "[traduzido] Añadir una Propiedad",
+    "approved": "[traduzido] Aprobado",
+    "pending": "[traduzido] Pendiente",
+    "rejected": "[traduzido] Rechazado",
+    "guestManagement": "[traduzido] Gestión de Huéspedes",
+    "noGuestData": "[traduzido] Aún no hay datos de huéspedes",
+    "noGuestDataMessage": "[traduzido] La información de los huéspedes aparecerá aquí una vez que usted reciba reservas.",
+    "messagesFromAdmin": "[traduzido] Mensajes del Administrador",
+    "noMessagesYet": "[traduzido] Aún no hay mensajes",
+    "noMessagesMessage": "[traduzido] Todavía no ha recibido mensajes del administrador de la plataforma.",
+    "financialOverview": "[traduzido] Resumen Financiero",
+    "financialDataMessage": "[traduzido] Sus datos financieros e historial de transacciones aparecerán aquí una vez que tenga reservas.",
+    "analyticsTitle": "[traduzido] Análisis",
+    "welcomeToHotelLiving": "[traduzido] ¡Bienvenido a Hotel-Living!",
+    "welcomeMessage": "[traduzido] Gracias por registrarte como socio hotelero. Para comenzar, añade tu primera propiedad usando la opción \"Añadir Propiedad\" abajo.",
+    "quickActions": "[traduzido] Acciones Rápidas",
+    "addPropertyAction": "[traduzido] Añadir Propiedad",
+    "addPropertyDescription": "[traduzido] Registrar un nuevo hotel o apartamento.",
+    "viewBookings": "[traduzido] Ver Reservas",
+    "viewBookingsDescription": "[traduzido] Gestionar reservas futuras y pasadas.",
+    "viewAnalytics": "[traduzido] Ver Análisis",
+    "viewAnalyticsDescription": "[traduzido] Consultar métricas detalladas de rendimiento.",
+    "manageReviews": "[traduzido] Gestionar Opiniones",
+    "manageReviewsDescription": "[traduzido] Responder a los comentarios de los huéspedes."
   }
 }
