--- a/src/i18n/locales/pt/dashboard/property-form.json
+++ b/src/i18n/locales/pt/dashboard/property-form.json
@@ -1,42 +1,42 @@
 {
   "dashboard": {
-    "generalInformation": "[PT] INFORMACIÓN GENERAL",
-    "hotelProfile": "[PT] PERFIL DEL HOTEL",
-    "accommodationTerms": "[PT] CONDICIONES DE ALOJAMIENTO",
-    "packagesAndRates": "[PT] PAQUETES Y TARIFAS",
-    "step1Of5": "[PT] Paso 1 de 5",
-    "step2Of5": "[PT] Paso 2 de 5",
-    "step3Of5": "[PT] Paso 3 de 5",
-    "step4Of5": "[PT] Paso 4 de 5",
-    "step5Of5": "[PT] Paso 5 de 5",
-    "previous": "[PT] Anterior",
-    "next": "[PT] Siguiente",
-    "hotelName": "[PT] Nombre del Hotel",
-    "hotelNamePlaceholder": "[PT] Ingrese el nombre del hotel",
-    "category": "[PT] Categoría",
-    "selectHotelCategory": "[PT] Seleccione la categoría del hotel",
-    "propertyType": "[PT] Tipo de Propiedad",
-    "selectPropertyType": "[PT] Seleccione el tipo de propiedad",
-    "styleOfProperty": "[PT] ESTILO DE LA PROPIEDAD",
-    "selectPropertyStyle": "[PT] Seleccione el estilo de la propiedad",
-    "description": "[PT] Descripción",
-    "hotelDescription": "[PT] DESCRIPCIÓN DEL HOTEL",
-    "hotelDescriptionPlaceholder": "[PT] Introduzca una descripción detallada de su hotel",
-    "idealGuestsEnjoy": "[PT] IDEAL PARA HUÉSPEDES QUE DISFRUTAN DE…",
-    "idealGuestsPlaceholder": "[PT] Describa a sus huéspedes ideales y sus intereses",
-    "atmosphereIs": "[PT] EL AMBIENTE ES…",
-    "atmospherePlaceholder": "[PT] Describa el ambiente y la atmósfera de su hotel",
-    "locationPerfectFor": "[PT] NUESTRA UBICACIÓN ES PERFECTA PARA…",
-    "locationPlaceholder": "[PT] Describa qué hace especial a su ubicación",
-    "defineRoomTypesStayDurations": "[PT] Por favor, defina los tipos de habitación, duraciones de estancia y regímenes de comidas en el Paso 3 antes de establecer precios.",
+    "generalInformation": "[traduzido] INFORMACIÓN GENERAL",
+    "hotelProfile": "[traduzido] PERFIL DEL HOTEL",
+    "accommodationTerms": "[traduzido] CONDICIONES DE ALOJAMIENTO",
+    "packagesAndRates": "[traduzido] PAQUETES Y TARIFAS",
+    "step1Of5": "[traduzido] Paso 1 de 5",
+    "step2Of5": "[traduzido] Paso 2 de 5",
+    "step3Of5": "[traduzido] Paso 3 de 5",
+    "step4Of5": "[traduzido] Paso 4 de 5",
+    "step5Of5": "[traduzido] Paso 5 de 5",
+    "previous": "[traduzido] Anterior",
+    "next": "[traduzido] Siguiente",
+    "hotelName": "[traduzido] Nombre del Hotel",
+    "hotelNamePlaceholder": "[traduzido] Ingrese el nombre del hotel",
+    "category": "[traduzido] Categoría",
+    "selectHotelCategory": "[traduzido] Seleccione la categoría del hotel",
+    "propertyType": "[traduzido] Tipo de Propiedad",
+    "selectPropertyType": "[traduzido] Seleccione el tipo de propiedad",
+    "styleOfProperty": "[traduzido] ESTILO DE LA PROPIEDAD",
+    "selectPropertyStyle": "[traduzido] Seleccione el estilo de la propiedad",
+    "description": "[traduzido] Descripción",
+    "hotelDescription": "[traduzido] DESCRIPCIÓN DEL HOTEL",
+    "hotelDescriptionPlaceholder": "[traduzido] Introduzca una descripción detallada de su hotel",
+    "idealGuestsEnjoy": "[traduzido] IDEAL PARA HUÉSPEDES QUE DISFRUTAN DE…",
+    "idealGuestsPlaceholder": "[traduzido] Describa a sus huéspedes ideales y sus intereses",
+    "atmosphereIs": "[traduzido] EL AMBIENTE ES…",
+    "atmospherePlaceholder": "[traduzido] Describa el ambiente y la atmósfera de su hotel",
+    "locationPerfectFor": "[traduzido] NUESTRA UBICACIÓN ES PERFECTA PARA…",
+    "locationPlaceholder": "[traduzido] Describa qué hace especial a su ubicación",
+    "defineRoomTypesStayDurations": "[traduzido] Por favor, defina los tipos de habitación, duraciones de estancia y regímenes de comidas en el Paso 3 antes de establecer precios.",
     "propertyStyles": {
-      "classic": "[PT] Clásico",
-      "classicElegant": "[PT] Clásico elegante",
-      "modern": "[PT] Moderno",
-      "fusion": "[PT] Fusión",
-      "urban": "[PT] Urbano",
-      "minimalist": "[PT] Minimalista",
-      "luxury": "[PT] Lujo"
+      "classic": "[traduzido] Clásico",
+      "classicElegant": "[traduzido] Clásico elegante",
+      "modern": "[traduzido] Moderno",
+      "fusion": "[traduzido] Fusión",
+      "urban": "[traduzido] Urbano",
+      "minimalist": "[traduzido] Minimalista",
+      "luxury": "[traduzido] Lujo"
     }
   }
 }
