--- a/src/i18n/locales/pt/dashboard/settings.json
+++ b/src/i18n/locales/pt/dashboard/settings.json
@@ -1,39 +1,39 @@
 {
   "dashboard": {
-    "hotelSettings": "[PT] Configuración del Hotel",
-    "saveAllSettings": "[PT] Guardar Todas las Configuraciones",
-    "checkinOut": "[PT] Check-in/out",
-    "autoPriceIncrease": "[PT] Incremento Automático de Precio",
-    "currency": "[PT] Moneda",
-    "policies": "[PT] Políticas",
-    "checkinOutPolicy": "[PT] Política de Check-in/out",
-    "progressivePriceIncrease": "[PT] Incremento progresivo del precio a medida que se reservan las habitaciones",
-    "enableAutoPriceIncrease": "[PT] Activar Incremento Automático de Precio",
-    "percentTotalIncrease": "[PT] % de Incremento Total",
-    "currencySettings": "[PT] Configuración de Moneda",
-    "currencySettingsDescription": "[PT] Seleccione su moneda preferida para las tarifas",
-    "preferredCurrency": "[PT] Moneda Preferida",
-    "notificationPreferences": "[PT] Preferencias de Notificación",
-    "notificationPreferencesDescription": "[PT] Gestione cómo y cuándo desea recibir notificaciones",
-    "emailNotifications": "[PT] Notificaciones por Email",
-    "notificationTypes": "[PT] Tipos de Notificación",
-    "newBookingConfirmations": "[PT] Confirmaciones de Nuevas Reservas",
-    "reviewAlerts": "[PT] Alertas de Opiniones",
-    "paymentNotifications": "[PT] Notificaciones de Pagos",
-    "hotelPolicies": "[PT] Políticas del Hotel",
-    "cancellationPolicy": "[PT] Política de Cancelación",
-    "cancellationPolicyDefault": "[PT] Los huéspedes pueden cancelar sin cargo hasta 48 horas antes de la llegada. Se cobrará el importe total si cancelan dentro de las 48 horas anteriores a la llegada.",
-    "petPolicy": "[PT] Política de Mascotas",
-    "petsAllowed": "[PT] Se permiten mascotas",
-    "noPetsAllowed": "[PT] No se permiten mascotas",
-    "petsCaseByCase": "[PT] Según cada caso",
-    "smokingPolicy": "[PT] Política de Fumadores",
-    "smokingAllowed": "[PT] Permitido fumar",
-    "nonSmoking": "[PT] No fumadores",
-    "smokingDesignatedAreas": "[PT] Solo en áreas designadas",
-    "childrenPolicy": "[PT] Política de Niños",
-    "childrenWelcome": "[PT] Se admiten niños",
-    "adultsOnly": "[PT] Solo adultos",
-    "childrenWithRestrictions": "[PT] Con restricciones de edad"
+    "hotelSettings": "[traduzido] Configuración del Hotel",
+    "saveAllSettings": "[traduzido] Guardar Todas las Configuraciones",
+    "checkinOut": "[traduzido] Check-in/out",
+    "autoPriceIncrease": "[traduzido] Incremento Automático de Precio",
+    "currency": "[traduzido] Moneda",
+    "policies": "[traduzido] Políticas",
+    "checkinOutPolicy": "[traduzido] Política de Check-in/out",
+    "progressivePriceIncrease": "[traduzido] Incremento progresivo del precio a medida que se reservan las habitaciones",
+    "enableAutoPriceIncrease": "[traduzido] Activar Incremento Automático de Precio",
+    "percentTotalIncrease": "[traduzido] % de Incremento Total",
+    "currencySettings": "[traduzido] Configuración de Moneda",
+    "currencySettingsDescription": "[traduzido] Seleccione su moneda preferida para las tarifas",
+    "preferredCurrency": "[traduzido] Moneda Preferida",
+    "notificationPreferences": "[traduzido] Preferencias de Notificación",
+    "notificationPreferencesDescription": "[traduzido] Gestione cómo y cuándo desea recibir notificaciones",
+    "emailNotifications": "[traduzido] Notificaciones por Email",
+    "notificationTypes": "[traduzido] Tipos de Notificación",
+    "newBookingConfirmations": "[traduzido] Confirmaciones de Nuevas Reservas",
+    "reviewAlerts": "[traduzido] Alertas de Opiniones",
+    "paymentNotifications": "[traduzido] Notificaciones de Pagos",
+    "hotelPolicies": "[traduzido] Políticas del Hotel",
+    "cancellationPolicy": "[traduzido] Política de Cancelación",
+    "cancellationPolicyDefault": "[traduzido] Los huéspedes pueden cancelar sin cargo hasta 48 horas antes de la llegada. Se cobrará el importe total si cancelan dentro de las 48 horas anteriores a la llegada.",
+    "petPolicy": "[traduzido] Política de Mascotas",
+    "petsAllowed": "[traduzido] Se permiten mascotas",
+    "noPetsAllowed": "[traduzido] No se permiten mascotas",
+    "petsCaseByCase": "[traduzido] Según cada caso",
+    "smokingPolicy": "[traduzido] Política de Fumadores",
+    "smokingAllowed": "[traduzido] Permitido fumar",
+    "nonSmoking": "[traduzido] No fumadores",
+    "smokingDesignatedAreas": "[traduzido] Solo en áreas designadas",
+    "childrenPolicy": "[traduzido] Política de Niños",
+    "childrenWelcome": "[traduzido] Se admiten niños",
+    "adultsOnly": "[traduzido] Solo adultos",
+    "childrenWithRestrictions": "[traduzido] Con restricciones de edad"
   }
 }
