--- a/src/i18n/locales/pt/filters.json
+++ b/src/i18n/locales/pt/filters.json
@@ -1,123 +1,123 @@
 {
   "filters": {
-    "all": "[PT] Todos",
-    "country": "[PT] PAÍS",
-    "city": "[PT] Ciudad",
-    "price": "[PT] Precio",
-    "stars": "[PT] Estrellas",
-    "property": "[PT] Tipo de Propiedad",
-    "amenities": "[PT] Comodidades",
-    "themes": "[PT] Temas",
-    "clearAll": "[PT] Limpiar Todo",
-    "apply": "[PT] Aplicar Filtros",
-    "pricePerMonth": "[PT] PRECIO POR MES",
-    "affinity": "[PT] AFINIDAD",
-    "month": "[PT] MES",
-    "roomFeatures": "[PT] Características de la habitación",
-    "hotelFeatures": "[PT] Características del hotel",
+    "all": "[traduzido] Todos",
+    "country": "[traduzido] PAÍS",
+    "city": "[traduzido] Ciudad",
+    "price": "[traduzido] Precio",
+    "stars": "[traduzido] Estrellas",
+    "property": "[traduzido] Tipo de Propiedad",
+    "amenities": "[traduzido] Comodidades",
+    "themes": "[traduzido] Temas",
+    "clearAll": "[traduzido] Limpiar Todo",
+    "apply": "[traduzido] Aplicar Filtros",
+    "pricePerMonth": "[traduzido] PRECIO POR MES",
+    "affinity": "[traduzido] AFINIDAD",
+    "month": "[traduzido] MES",
+    "roomFeatures": "[traduzido] Características de la habitación",
+    "hotelFeatures": "[traduzido] Características del hotel",
     "roomTypes": {
-      "title": "[PT] Tipos de habitación",
-      "single": "[PT] Individual",
-      "double": "[PT] Doble",
-      "suite": "[PT] Suite",
-      "studio": "[PT] Estudio",
-      "penthouse": "[PT] Ático",
-      "familyRoom": "[PT] Habitación familiar"
+      "title": "[traduzido] Tipos de habitación",
+      "single": "[traduzido] Individual",
+      "double": "[traduzido] Doble",
+      "suite": "[traduzido] Suite",
+      "studio": "[traduzido] Estudio",
+      "penthouse": "[traduzido] Ático",
+      "familyRoom": "[traduzido] Habitación familiar"
     },
-    "typeOfProperty": "[PT] Tipo de propiedad",
-    "location": "[PT] Ubicación",
-    "category": "[PT] Categoría",
-    "styleOfProperty": "[PT] Estilo de la propiedad",
-    "meals": "[PT] Régimen de comidas",
-    "lengthOfStay": "[PT] Duración de la estancia",
-    "resetAllFilters": "[PT] Restablecer todos los filtros",
+    "typeOfProperty": "[traduzido] Tipo de propiedad",
+    "location": "[traduzido] Ubicación",
+    "category": "[traduzido] Categoría",
+    "styleOfProperty": "[traduzido] Estilo de la propiedad",
+    "meals": "[traduzido] Régimen de comidas",
+    "lengthOfStay": "[traduzido] Duración de la estancia",
+    "resetAllFilters": "[traduzido] Restablecer todos los filtros",
     "priceRanges": {
-      "upTo1000": "[PT] Hasta 1.000 $",
-      "1000to1500": "[PT] 1.000 $ a 1.500 $",
-      "1500to2000": "[PT] 1.500 $ a 2.000 $",
-      "moreThan2000": "[PT] Más de 2.000 $"
+      "upTo1000": "[traduzido] Hasta 1.000 $",
+      "1000to1500": "[traduzido] 1.000 $ a 1.500 $",
+      "1500to2000": "[traduzido] 1.500 $ a 2.000 $",
+      "moreThan2000": "[traduzido] Más de 2.000 $"
     },
     "months": {
-      "january": "[PT] Enero",
-      "february": "[PT] Febrero",
-      "march": "[PT] Marzo",
-      "april": "[PT] Abril",
-      "may": "[PT] Mayo",
-      "june": "[PT] Junio",
-      "july": "[PT] Julio",
-      "august": "[PT] Agosto",
-      "september": "[PT] Septiembre",
-      "october": "[PT] Octubre",
-      "november": "[PT] Noviembre",
-      "december": "[PT] Diciembre"
+      "january": "[traduzido] Enero",
+      "february": "[traduzido] Febrero",
+      "march": "[traduzido] Marzo",
+      "april": "[traduzido] Abril",
+      "may": "[traduzido] Mayo",
+      "june": "[traduzido] Junio",
+      "july": "[traduzido] Julio",
+      "august": "[traduzido] Agosto",
+      "september": "[traduzido] Septiembre",
+      "october": "[traduzido] Octubre",
+      "november": "[traduzido] Noviembre",
+      "december": "[traduzido] Diciembre"
     },
     "countries": {
-      "spain": "[PT] España 🇪🇸",
-      "france": "[PT] Francia 🇫🇷",
-      "italy": "[PT] Italia 🇮🇹",
-      "usa": "[PT] Estados Unidos 🇺🇸",
-      "egypt": "[PT] Egipto 🇪🇬",
-      "turkey": "[PT] Turquía 🇹🇷",
-      "unitedKingdom": "[PT] Reino Unido 🇬🇧",
-      "germany": "[PT] Alemania 🇩🇪",
-      "portugal": "[PT] Portugal 🇵🇹",
-      "greece": "[PT] Grecia 🇬🇷"
+      "spain": "[traduzido] España 🇪🇸",
+      "france": "[traduzido] Francia 🇫🇷",
+      "italy": "[traduzido] Italia 🇮🇹",
+      "usa": "[traduzido] Estados Unidos 🇺🇸",
+      "egypt": "[traduzido] Egipto 🇪🇬",
+      "turkey": "[traduzido] Turquía 🇹🇷",
+      "unitedKingdom": "[traduzido] Reino Unido 🇬🇧",
+      "germany": "[traduzido] Alemania 🇩🇪",
+      "portugal": "[traduzido] Portugal 🇵🇹",
+      "greece": "[traduzido] Grecia 🇬🇷"
     },
     "propertyTypes": {
-      "hotel": "[PT] Hotel",
-      "resort": "[PT] Resort",
-      "boutiqueHotel": "[PT] Hotel boutique",
-      "motel": "[PT] Motel",
-      "inn": "[PT] Posada"
+      "hotel": "[traduzido] Hotel",
+      "resort": "[traduzido] Resort",
+      "boutiqueHotel": "[traduzido] Hotel boutique",
+      "motel": "[traduzido] Motel",
+      "inn": "[traduzido] Posada"
     },
     "propertyStyles": {
-      "classic": "[PT] Clásico",
-      "classicElegant": "[PT] Clásico elegante",
-      "modern": "[PT] Moderno",
-      "fusion": "[PT] Fusión",
-      "urban": "[PT] Urbano",
-      "minimalist": "[PT] Minimalista",
-      "luxury": "[PT] Lujo"
+      "classic": "[traduzido] Clásico",
+      "classicElegant": "[traduzido] Clásico elegante",
+      "modern": "[traduzido] Moderno",
+      "fusion": "[traduzido] Fusión",
+      "urban": "[traduzido] Urbano",
+      "minimalist": "[traduzido] Minimalista",
+      "luxury": "[traduzido] Lujo"
     },
     "categories": {
-      "1star": "[PT] 1 estrella",
-      "2stars": "[PT] 2 estrellas",
-      "3stars": "[PT] 3 estrellas",
-      "4stars": "[PT] 4 estrellas",
-      "5stars": "[PT] 5 estrellas"
+      "1star": "[traduzido] 1 estrella",
+      "2stars": "[traduzido] 2 estrellas",
+      "3stars": "[traduzido] 3 estrellas",
+      "4stars": "[traduzido] 4 estrellas",
+      "5stars": "[traduzido] 5 estrellas"
     },
     "mealPlans": {
-      "breakfastIncluded": "[PT] Desayuno incluido",
-      "halfBoard": "[PT] Media pensión",
-      "fullBoard": "[PT] Pensión completa",
-      "allInclusive": "[PT] Todo incluido",
-      "laundry": "[PT] Lavandería",
-      "externalLaundryService": "[PT] Servicio de lavandería externo disponible"
+      "breakfastIncluded": "[traduzido] Desayuno incluido",
+      "halfBoard": "[traduzido] Media pensión",
+      "fullBoard": "[traduzido] Pensión completa",
+      "allInclusive": "[traduzido] Todo incluido",
+      "laundry": "[traduzido] Lavandería",
+      "externalLaundryService": "[traduzido] Servicio de lavandería externo disponible"
     },
     "stayLengths": {
-      "8days": "[PT] 8 días",
-      "16days": "[PT] 16 días",
-      "24days": "[PT] 24 días",
-      "32days": "[PT] 32 días"
+      "8days": "[traduzido] 8 días",
+      "16days": "[traduzido] 16 días",
+      "24days": "[traduzido] 24 días",
+      "32days": "[traduzido] 32 días"
     },
     "affinities": {
-      "art": "[PT] Arte",
-      "business": "[PT] Negocios",
-      "culture": "[PT] Cultura",
-      "education": "[PT] Educación",
-      "entertainment": "[PT] Entretenimiento",
-      "foodAndDrinks": "[PT] Comida y Bebidas",
-      "healthAndWellness": "[PT] Salud y Bienestar",
-      "history": "[PT] Historia",
-      "hobbies": "[PT] Aficiones",
-      "languages": "[PT] Idiomas",
-      "lifestyle": "[PT] Estilo de Vida",
-      "nature": "[PT] Naturaleza",
-      "personalDevelopment": "[PT] Desarrollo Personal",
-      "relationships": "[PT] Relaciones",
-      "scienceAndTechnology": "[PT] Ciencia y Tecnología",
-      "socialImpact": "[PT] Impacto Social",
-      "sports": "[PT] Deportes"
+      "art": "[traduzido] Arte",
+      "business": "[traduzido] Negocios",
+      "culture": "[traduzido] Cultura",
+      "education": "[traduzido] Educación",
+      "entertainment": "[traduzido] Entretenimiento",
+      "foodAndDrinks": "[traduzido] Comida y Bebidas",
+      "healthAndWellness": "[traduzido] Salud y Bienestar",
+      "history": "[traduzido] Historia",
+      "hobbies": "[traduzido] Aficiones",
+      "languages": "[traduzido] Idiomas",
+      "lifestyle": "[traduzido] Estilo de Vida",
+      "nature": "[traduzido] Naturaleza",
+      "personalDevelopment": "[traduzido] Desarrollo Personal",
+      "relationships": "[traduzido] Relaciones",
+      "scienceAndTechnology": "[traduzido] Ciencia y Tecnología",
+      "socialImpact": "[traduzido] Impacto Social",
+      "sports": "[traduzido] Deportes"
     }
   }
 }
