--- a/src/i18n/locales/pt/navigation.json
+++ b/src/i18n/locales/pt/navigation.json
@@ -1,33 +1,33 @@
 {
   "navigation": {
-    "home": "[PT] Inicio",
-    "hotels": "[PT] Hoteles",
-    "dashboard": "[PT] Panel de control",
-    "login": "[PT] Iniciar sesión",
-    "logout": "[PT] Cerrar sesión",
-    "signup": "[PT] Registrarse",
-    "profile": "[PT] Perfil",
-    "settings": "[PT] Configuración",
-    "bookings": "[PT] Reservas",
-    "admin": "[PT] Administrador",
-    "language": "[PT] Idioma",
-    "help": "[PT] Ayuda",
-    "faq": "[PT] Preguntas frecuentes",
-    "contact": "[PT] Contacto",
-    "videos": "[PT] Videos",
-    "featuredHotels": "[PT] Hoteles destacados",
-    "affinityStays": "[PT] Estancias de afinidad",
-    "register": "[PT] Registrar",
-    "aboutUs": "[PT] Sobre nosotros"
+    "home": "Início",
+    "hotels": "Hotéis",
+    "dashboard": "[traduzido] Panel de control",
+    "login": "Entrar",
+    "logout": "Sair",
+    "signup": "[traduzido] Registrarse",
+    "profile": "[traduzido] Perfil",
+    "settings": "[traduzido] Configuración",
+    "bookings": "[traduzido] Reservas",
+    "admin": "[traduzido] Administrador",
+    "language": "[traduzido] Idioma",
+    "help": "[traduzido] Ayuda",
+    "faq": "Perguntas frequentes",
+    "contact": "Contato",
+    "videos": "[traduzido] Videos",
+    "featuredHotels": "[traduzido] Hoteles destacados",
+    "affinityStays": "[traduzido] Estancias de afinidad",
+    "register": "[traduzido] Registrar",
+    "aboutUs": "[traduzido] Sobre nosotros"
   },
   "mainNavigationContent": {
-    "faq": "[PT] FAQ",
-    "affinityStays": "[PT] Estancias por afinidades",
-    "hotel": "[PT] Hotel",
-    "videos": "[PT] Videos",
-    "featuredHotels": "[PT] Hoteles destacados",
-    "hotelDashboard": "[PT] Panel del hotel",
-    "adminDashboard": "[PT] Panel de administración",
-    "logout": "[PT] Cerrar sesión"
+    "faq": "[traduzido] FAQ",
+    "affinityStays": "[traduzido] Estancias por afinidades",
+    "hotel": "[traduzido] Hotel",
+    "videos": "[traduzido] Videos",
+    "featuredHotels": "[traduzido] Hoteles destacados",
+    "hotelDashboard": "[traduzido] Panel del hotel",
+    "adminDashboard": "[traduzido] Panel de administración",
+    "logout": "Sair"
   }
 }
