--- a/src/i18n/locales/pt/auth.json
+++ b/src/i18n/locales/pt/auth.json
@@ -1,48 +1,48 @@
 {
   "auth": {
-    "createTravelerAccount": "[PT] Crear cuenta de viajero",
-    "joinHotelLiving": "[PT] Únase a Hotel-Living y descubra estancias temáticas",
-    "fullName": "[PT] Nombre completo",
-    "enterFullName": "[PT] Introduzca su nombre completo",
-    "email": "[PT] Correo electrónico",
-    "enterEmail": "[PT] Introduzca su correo electrónico",
-    "password": "[PT] Contraseña",
-    "createPassword": "[PT] Cree una contraseña",
-    "confirmPassword": "[PT] Confirmar contraseña",
-    "confirmYourPassword": "[PT] Confirme su contraseña",
-    "agreeTerms": "[PT] Acepto los Términos y Condiciones y la Política de Privacidad",
-    "alreadyHaveAccount": "[PT] ¿Ya tienes una cuenta?",
-    "signIn": "[PT] Inicie sesión",
-    "areHotelOwner": "[PT] ¿Es usted propietario de un hotel?",
-    "registerHotelPartner": "[PT] Regístrese como Hotel Partner",
-    "travelerLogin": "[PT] Acceso viajero",
-    "signInToAccount": "[PT] Inicie sesión en su cuenta de Hotel-Living",
-    "businessEmail": "[PT] Correo profesional",
-    "rememberMe": "[PT] Recuérdame",
-    "forgotPassword": "[PT] ¿Olvidaste tu contraseña?",
-    "signInAsTraveler": "[PT] Iniciar sesión como viajero",
-    "dontHaveAccount": "[PT] ¿No tienes una cuenta?",
-    "createTravelerAccountLink": "[PT] Cree una cuenta de viajero",
-    "hotelPartnerLogin": "[PT] Acceso hotel partner",
-    "signInToPartnerAccount": "[PT] Inicie sesión en su cuenta de hotel partner de Hotel-Living",
-    "signInAsHotelPartner": "[PT] Iniciar sesión como hotel partner",
-    "dontHavePartnerAccount": "[PT] ¿No tiene una cuenta de hotel partner?",
-    "registerAsHotelPartner": "[PT] Regístrese como hotel partner",
-    "login": "[PT] Iniciar sesión",
-    "signup": "[PT] Registrarse",
-    "enterPassword": "[PT] Ingresa tu contraseña",
-    "signInWith": "[PT] Iniciar sesión con",
-    "signUpWith": "[PT] Registrarse con",
-    "createAccount": "[PT] Crear cuenta",
-    "loginTitle": "[PT] Iniciar sesión",
-    "signupTitle": "[PT] Registrarse",
-    "resetPassword": "[PT] Restablecer contraseña",
-    "sendResetLink": "[PT] Enviar enlace de restablecimiento",
-    "loginButton": "[PT] Iniciar sesión",
-    "signupButton": "[PT] Registrarse",
-    "logoutButton": "[PT] Cerrar sesión",
-    "invalidCredentials": "[PT] Credenciales inválidas",
-    "accountCreated": "[PT] Cuenta creada con éxito",
-    "passwordResetSent": "[PT] Enlace de restablecimiento enviado"
+    "createTravelerAccount": "[traduzido] Crear cuenta de viajero",
+    "joinHotelLiving": "[traduzido] Únase a Hotel-Living y descubra estancias temáticas",
+    "fullName": "[traduzido] Nombre completo",
+    "enterFullName": "[traduzido] Introduzca su nombre completo",
+    "email": "[traduzido] Correo electrónico",
+    "enterEmail": "[traduzido] Introduzca su correo electrónico",
+    "password": "[traduzido] Contraseña",
+    "createPassword": "[traduzido] Cree una contraseña",
+    "confirmPassword": "[traduzido] Confirmar contraseña",
+    "confirmYourPassword": "[traduzido] Confirme su contraseña",
+    "agreeTerms": "[traduzido] Acepto los Términos y Condiciones y la Política de Privacidad",
+    "alreadyHaveAccount": "[traduzido] ¿Ya tienes una cuenta?",
+    "signIn": "[traduzido] Inicie sesión",
+    "areHotelOwner": "[traduzido] ¿Es usted propietario de un hotel?",
+    "registerHotelPartner": "[traduzido] Regístrese como Hotel Partner",
+    "travelerLogin": "[traduzido] Acceso viajero",
+    "signInToAccount": "[traduzido] Inicie sesión en su cuenta de Hotel-Living",
+    "businessEmail": "[traduzido] Correo profesional",
+    "rememberMe": "[traduzido] Recuérdame",
+    "forgotPassword": "[traduzido] ¿Olvidaste tu contraseña?",
+    "signInAsTraveler": "[traduzido] Iniciar sesión como viajero",
+    "dontHaveAccount": "[traduzido] ¿No tienes una cuenta?",
+    "createTravelerAccountLink": "[traduzido] Cree una cuenta de viajero",
+    "hotelPartnerLogin": "[traduzido] Acceso hotel partner",
+    "signInToPartnerAccount": "[traduzido] Inicie sesión en su cuenta de hotel partner de Hotel-Living",
+    "signInAsHotelPartner": "[traduzido] Iniciar sesión como hotel partner",
+    "dontHavePartnerAccount": "[traduzido] ¿No tiene una cuenta de hotel partner?",
+    "registerAsHotelPartner": "[traduzido] Regístrese como hotel partner",
+    "login": "Entrar",
+    "signup": "[traduzido] Registrarse",
+    "enterPassword": "[traduzido] Ingresa tu contraseña",
+    "signInWith": "[traduzido] Iniciar sesión con",
+    "signUpWith": "[traduzido] Registrarse con",
+    "createAccount": "[traduzido] Crear cuenta",
+    "loginTitle": "Entrar",
+    "signupTitle": "[traduzido] Registrarse",
+    "resetPassword": "[traduzido] Restablecer contraseña",
+    "sendResetLink": "[traduzido] Enviar enlace de restablecimiento",
+    "loginButton": "Entrar",
+    "signupButton": "[traduzido] Registrarse",
+    "logoutButton": "Sair",
+    "invalidCredentials": "[traduzido] Credenciales inválidas",
+    "accountCreated": "[traduzido] Cuenta creada con éxito",
+    "passwordResetSent": "[traduzido] Enlace de restablecimiento enviado"
   }
 }
