--- a/src/i18n/locales/pt/content.json
+++ b/src/i18n/locales/pt/content.json
@@ -1,49 +1,49 @@
 {
   "footerContent": {
-    "faq": "[PT] FAQ",
-    "affinityStays": "[PT] Estancias por afinidades",
-    "hotel": "[PT] Hotel",
-    "videos": "[PT] Videos",
-    "featuredHotels": "[PT] Hoteles destacados",
-    "ourServices": "[PT] Nuestros servicios",
-    "ourValues": "[PT] Nuestros valores",
-    "customerService": "[PT] Atención al cliente",
-    "contact": "[PT] Contacto",
-    "termsAndConditions": "[PT] Términos y condiciones",
-    "privacyAndCookies": "[PT] Privacidad y cookies",
-    "intellectualProperty": "[PT] Propiedad intelectual",
-    "ourTeam": "[PT] Nuestro equipo",
-    "register": "[PT] Registrar",
-    "signIn": "[PT] Iniciar sesión",
-    "copyright": "[PT] © 2025 Hotel-Living.com. Todos los derechos reservados. Esta es una versión Beta, sujeta a actualizaciones continuas.",
-    "sampleListingsDisclaimer": "[PT] Algunos listados pueden ser propiedades de muestra utilizadas para demostrar el funcionamiento de Hotel-Living."
+    "faq": "[traduzido] FAQ",
+    "affinityStays": "[traduzido] Estancias por afinidades",
+    "hotel": "[traduzido] Hotel",
+    "videos": "[traduzido] Videos",
+    "featuredHotels": "[traduzido] Hoteles destacados",
+    "ourServices": "[traduzido] Nuestros servicios",
+    "ourValues": "[traduzido] Nuestros valores",
+    "customerService": "[traduzido] Atención al cliente",
+    "contact": "Contato",
+    "termsAndConditions": "[traduzido] Términos y condiciones",
+    "privacyAndCookies": "[traduzido] Privacidad y cookies",
+    "intellectualProperty": "[traduzido] Propiedad intelectual",
+    "ourTeam": "[traduzido] Nuestro equipo",
+    "register": "[traduzido] Registrar",
+    "signIn": "Entrar",
+    "copyright": "[traduzido] © 2025 Hotel-Living.com. Todos los derechos reservados. Esta es una versión Beta, sujeta a actualizaciones continuas.",
+    "sampleListingsDisclaimer": "[traduzido] Algunos listados pueden ser propiedades de muestra utilizadas para demostrar el funcionamiento de Hotel-Living."
   },
   "indexContent": {
-    "revolutionTitle": "[PT] La revolución ha llegado",
-    "liveInHotels": "[PT] Vive en hoteles",
-    "boostYourLife": "[PT] ¡Impulsa tu vida!",
-    "noHouseholdChores": "[PT] Adiós, tareas del hogar",
-    "selectThemes": "[PT] Busca hoteles según tus intereses",
-    "boostSocialLife": "[PT] ¡Impulsa tu vida social!",
-    "meetPeople": "[PT] Conoce y disfruta con personas afines",
-    "country": "[PT] País",
-    "month": "[PT] Mes",
-    "affinity": "[PT] Afinidad",
-    "pricePerMonth": "[PT] Precio por mes",
-    "search": "[PT] Buscar"
+    "revolutionTitle": "[traduzido] La revolución ha llegado",
+    "liveInHotels": "[traduzido] Vive en hoteles",
+    "boostYourLife": "[traduzido] ¡Impulsa tu vida!",
+    "noHouseholdChores": "[traduzido] Adiós, tareas del hogar",
+    "selectThemes": "[traduzido] Busca hoteles según tus intereses",
+    "boostSocialLife": "[traduzido] ¡Impulsa tu vida social!",
+    "meetPeople": "[traduzido] Conoce y disfruta con personas afines",
+    "country": "[traduzido] País",
+    "month": "[traduzido] Mes",
+    "affinity": "[traduzido] Afinidad",
+    "pricePerMonth": "[traduzido] Precio por mes",
+    "search": "[traduzido] Buscar"
   },
   "videosContent": {
-    "featuredTitle": "[PT] Destacado: Experiencia en Hoteles Temáticos",
-    "featuredDescription": "[PT] Descubre la magia de nuestros hoteles temáticos y experimenta una nueva forma de hospedarte.",
-    "comingSoonOwnerStories": "[PT] Próximamente: Historias de Propietarios de Hoteles",
-    "availableJune": "[PT] Disponible en junio de 2025",
-    "comingSoonGuestExperiences": "[PT] Próximamente: Experiencias de los Huéspedes",
-    "availableJuly": "[PT] Disponible en julio de 2025"
+    "featuredTitle": "[traduzido] Destacado: Experiencia en Hoteles Temáticos",
+    "featuredDescription": "[traduzido] Descubre la magia de nuestros hoteles temáticos y experimenta una nueva forma de hospedarte.",
+    "comingSoonOwnerStories": "[traduzido] Próximamente: Historias de Propietarios de Hoteles",
+    "availableJune": "[traduzido] Disponible en junio de 2025",
+    "comingSoonGuestExperiences": "[traduzido] Próximamente: Experiencias de los Huéspedes",
+    "availableJuly": "[traduzido] Disponible en julio de 2025"
   },
   "featuredHotelsContent": {
-    "pageTitle": "[PT] Hoteles Destacados",
-    "wantToBeFirst": "[PT] ¿Quieres que tu hotel aparezca en primer lugar?",
-    "featureDescription": "[PT] Podemos destacar tu propiedad aquí mismo — sin grandes tarifas, solo con una colaboración inteligente.",
-    "loginForInfo": "[PT] Inicia sesión en el panel de tu hotel para más información."
+    "pageTitle": "[traduzido] Hoteles Destacados",
+    "wantToBeFirst": "[traduzido] ¿Quieres que tu hotel aparezca en primer lugar?",
+    "featureDescription": "[traduzido] Podemos destacar tu propiedad aquí mismo — sin grandes tarifas, solo con una colaboración inteligente.",
+    "loginForInfo": "[traduzido] Inicia sesión en el panel de tu hotel para más información."
   }
 }
