--- a/src/i18n/locales/pt/customerService.json
+++ b/src/i18n/locales/pt/customerService.json
@@ -1,16 +1,16 @@
 {
   "customerService": {
-    "title": "[PT] Atención al Cliente",
-    "description": "[PT] Por favor, complete el formulario a continuación para contactar a nuestro equipo de atención al cliente. Nos pondremos en contacto con usted lo antes posible.",
+    "title": "[traduzido] Atención al Cliente",
+    "description": "[traduzido] Por favor, complete el formulario a continuación para contactar a nuestro equipo de atención al cliente. Nos pondremos en contacto con usted lo antes posible.",
     "form": {
-      "name": "[PT] Nombre",
-      "email": "[PT] Dirección de Correo Electrónico",
-      "country": "[PT] País",
-      "city": "[PT] Ciudad",
-      "message": "[PT] Su Mensaje",
-      "sending": "[PT] Enviando...",
-      "send": "[PT] Enviar Mensaje"
+      "name": "[traduzido] Nombre",
+      "email": "[traduzido] Dirección de Correo Electrónico",
+      "country": "[traduzido] País",
+      "city": "[traduzido] Ciudad",
+      "message": "[traduzido] Su Mensaje",
+      "sending": "[traduzido] Enviando...",
+      "send": "[traduzido] Enviar Mensaje"
     },
-    "success": "[PT] ¡Gracias por su mensaje! Nos pondremos en contacto con usted pronto."
+    "success": "[traduzido] ¡Gracias por su mensaje! Nos pondremos en contacto con usted pronto."
   }
 }
