--- a/src/i18n/locales/pt/dashboard/accommodation.json
+++ b/src/i18n/locales/pt/dashboard/accommodation.json
@@ -1,30 +1,30 @@
 {
   "dashboard": {
-    "accommodationTerms": "[PT] CONDICIONES DE ALOJAMIENTO",
-    "stayDuration": "[PT] DURACIÓN DE LA ESTANCIA",
-    "selectStayDurations": "[PT] Seleccione todas las duraciones de estancia que ofrece:",
-    "days": "[PT] días",
-    "singleCheckinCheckout": "[PT] DÍA ÚNICO DE ENTRADA / SALIDA",
-    "selectCheckinDay": "[PT] Seleccione el día en que los huéspedes entran y salen:",
-    "availabilityDates": "[PT] FECHAS DISPONIBLES",
-    "mealPlans": "[PT] RÉGIMEN DE COMIDAS",
-    "roomTypes": "[PT] TIPOS DE HABITACIÓN",
-    "defineRoomTypes": "[PT] Defina sus tipos de habitación con fotos y disponibilidad:",
-    "availableRoomTypes": "[PT] TIPOS DE HABITACIÓN DISPONIBLES",
-    "none": "[PT] Ninguno",
-    "addRoomType": "[PT] AÑADIR TIPO DE HABITACIÓN",
-    "breakfastIncluded": "[PT] Desayuno incluido",
-    "halfBoard": "[PT] Media pensión",
-    "fullBoard": "[PT] Pensión completa",
-    "allInclusive": "[PT] Todo incluido",
-    "laundry": "[PT] Lavandería",
-    "externalLaundryService": "[PT] Servicio de lavandería externo disponible",
-    "monday": "[PT] Lunes",
-    "tuesday": "[PT] Martes",
-    "wednesday": "[PT] Miércoles",
-    "thursday": "[PT] Jueves",
-    "friday": "[PT] Viernes",
-    "saturday": "[PT] Sábado",
-    "sunday": "[PT] Domingo"
+    "accommodationTerms": "[traduzido] CONDICIONES DE ALOJAMIENTO",
+    "stayDuration": "[traduzido] DURACIÓN DE LA ESTANCIA",
+    "selectStayDurations": "[traduzido] Seleccione todas las duraciones de estancia que ofrece:",
+    "days": "[traduzido] días",
+    "singleCheckinCheckout": "[traduzido] DÍA ÚNICO DE ENTRADA / SALIDA",
+    "selectCheckinDay": "[traduzido] Seleccione el día en que los huéspedes entran y salen:",
+    "availabilityDates": "[traduzido] FECHAS DISPONIBLES",
+    "mealPlans": "[traduzido] RÉGIMEN DE COMIDAS",
+    "roomTypes": "[traduzido] TIPOS DE HABITACIÓN",
+    "defineRoomTypes": "[traduzido] Defina sus tipos de habitación con fotos y disponibilidad:",
+    "availableRoomTypes": "[traduzido] TIPOS DE HABITACIÓN DISPONIBLES",
+    "none": "[traduzido] Ninguno",
+    "addRoomType": "[traduzido] AÑADIR TIPO DE HABITACIÓN",
+    "breakfastIncluded": "[traduzido] Desayuno incluido",
+    "halfBoard": "[traduzido] Media pensión",
+    "fullBoard": "[traduzido] Pensión completa",
+    "allInclusive": "[traduzido] Todo incluido",
+    "laundry": "[traduzido] Lavandería",
+    "externalLaundryService": "[traduzido] Servicio de lavandería externo disponible",
+    "monday": "[traduzido] Lunes",
+    "tuesday": "[traduzido] Martes",
+    "wednesday": "[traduzido] Miércoles",
+    "thursday": "[traduzido] Jueves",
+    "friday": "[traduzido] Viernes",
+    "saturday": "[traduzido] Sábado",
+    "sunday": "[traduzido] Domingo"
   }
 }
