--- a/src/i18n/locales/pt/dashboard/advertising.json
+++ b/src/i18n/locales/pt/dashboard/advertising.json
@@ -1,34 +1,34 @@
 {
   "advertising": {
-    "title": "[PT] Promoción Publicitaria",
-    "headerSlogan1": "[PT] Obtenga un mes de publicidad gratuita en Hotel-Living",
-    "headerSlogan2": "[PT] Permita que su hotel sea visto — de forma gratuita.",
-    "headerSlogan3": "[PT] Intercambie 3 noches. Obtenga 30 días de visibilidad.",
-    "headerSlogan4": "[PT] Los huéspedes aportan valor y movimiento.",
-    "promotionOfferTitle": "[PT] Nuestra Oferta de Promoción",
-    "promotionOfferText1": "[PT] A cambio de solamente tres noches de alojamiento gratuito en su hotel, le ofrecemos un mes completo de publicidad destacada en nuestro portal — en las zonas más visibles y con mayor tráfico.",
-    "promotionOfferText2": "[PT] Estas tres noches pueden ofrecerse en cualquier mes del año y no necesita especificar fechas exactas. Simplemente elegir dos o tres meses de disponibilidad es suficiente.",
-    "promotionOfferText3": "[PT] Estos huéspedes promocionales no solo proporcionarán visibilidad y actividad a su hotel, sino también ingresos adicionales potenciales (restaurante, servicios, opiniones) y un valioso movimiento y exposición — mucho más atractivo que tener habitaciones vacías.",
-    "joinPromotionTitle": "[PT] Participe en esta Promoción",
-    "contactName": "[PT] Nombre de Contacto",
-    "contactNamePlaceholder": "[PT] Su nombre",
-    "contactEmail": "[PT] Email de Contacto",
-    "contactEmailPlaceholder": "[PT] grand_soiree@yahoo.com",
-    "availableMonthsTitle": "[PT] Meses Disponibles para las Noches Gratuitas",
-    "availableMonthsDescription": "[PT] Seleccione al menos 2 meses en los que pueda ofrecer las noches gratuitas.",
-    "january": "[PT] Enero",
-    "february": "[PT] Febrero",
-    "march": "[PT] Marzo",
-    "april": "[PT] Abril",
-    "may": "[PT] Mayo",
-    "june": "[PT] Junio",
-    "july": "[PT] Julio",
-    "august": "[PT] Agosto",
-    "september": "[PT] Septiembre",
-    "october": "[PT] Octubre",
-    "november": "[PT] Noviembre",
-    "december": "[PT] Diciembre",
-    "termsAcceptance": "[PT] Acepto y entiendo ofrecer 3 noches gratuitas a cambio de 1 mes de publicidad.",
-    "submitButton": "[PT] Enviar Solicitud de Promoción"
+    "title": "[traduzido] Promoción Publicitaria",
+    "headerSlogan1": "[traduzido] Obtenga un mes de publicidad gratuita en Hotel-Living",
+    "headerSlogan2": "[traduzido] Permita que su hotel sea visto — de forma gratuita.",
+    "headerSlogan3": "[traduzido] Intercambie 3 noches. Obtenga 30 días de visibilidad.",
+    "headerSlogan4": "[traduzido] Los huéspedes aportan valor y movimiento.",
+    "promotionOfferTitle": "[traduzido] Nuestra Oferta de Promoción",
+    "promotionOfferText1": "[traduzido] A cambio de solamente tres noches de alojamiento gratuito en su hotel, le ofrecemos un mes completo de publicidad destacada en nuestro portal — en las zonas más visibles y con mayor tráfico.",
+    "promotionOfferText2": "[traduzido] Estas tres noches pueden ofrecerse en cualquier mes del año y no necesita especificar fechas exactas. Simplemente elegir dos o tres meses de disponibilidad es suficiente.",
+    "promotionOfferText3": "[traduzido] Estos huéspedes promocionales no solo proporcionarán visibilidad y actividad a su hotel, sino también ingresos adicionales potenciales (restaurante, servicios, opiniones) y un valioso movimiento y exposición — mucho más atractivo que tener habitaciones vacías.",
+    "joinPromotionTitle": "[traduzido] Participe en esta Promoción",
+    "contactName": "[traduzido] Nombre de Contacto",
+    "contactNamePlaceholder": "[traduzido] Su nombre",
+    "contactEmail": "[traduzido] Email de Contacto",
+    "contactEmailPlaceholder": "[traduzido] grand_soiree@yahoo.com",
+    "availableMonthsTitle": "[traduzido] Meses Disponibles para las Noches Gratuitas",
+    "availableMonthsDescription": "[traduzido] Seleccione al menos 2 meses en los que pueda ofrecer las noches gratuitas.",
+    "january": "[traduzido] Enero",
+    "february": "[traduzido] Febrero",
+    "march": "[traduzido] Marzo",
+    "april": "[traduzido] Abril",
+    "may": "[traduzido] Mayo",
+    "june": "[traduzido] Junio",
+    "july": "[traduzido] Julio",
+    "august": "[traduzido] Agosto",
+    "september": "[traduzido] Septiembre",
+    "october": "[traduzido] Octubre",
+    "november": "[traduzido] Noviembre",
+    "december": "[traduzido] Diciembre",
+    "termsAcceptance": "[traduzido] Acepto y entiendo ofrecer 3 noches gratuitas a cambio de 1 mes de publicidad.",
+    "submitButton": "[traduzido] Enviar Solicitud de Promoción"
   }
 }
