--- a/src/i18n/locales/pt/dashboard/features.json
+++ b/src/i18n/locales/pt/dashboard/features.json
@@ -1,12 +1,12 @@
 {
   "dashboard": {
-    "affinities": "[PT] 2.1- AFINIDADES",
-    "affinitiesDescription": "[PT] Haga que su hotel destaque frente a la competencia incorporando afinidades grupales para atraer a sus huéspedes más adecuados y afines",
-    "moreInformation": "[PT] Más información",
-    "activities": "[PT] 2.2- ACTIVIDADES",
-    "hotelFeatures": "[PT] 2.3- SERVICIOS DEL HOTEL",
-    "roomFeatures": "[PT] 2.4- SERVICIOS DE LAS HABITACIONES",
-    "selectAll": "[PT] Seleccionar Todo",
-    "deselectAll": "[PT] Deseleccionar Todo"
+    "affinities": "[traduzido] 2.1- AFINIDADES",
+    "affinitiesDescription": "[traduzido] Haga que su hotel destaque frente a la competencia incorporando afinidades grupales para atraer a sus huéspedes más adecuados y afines",
+    "moreInformation": "[traduzido] Más información",
+    "activities": "[traduzido] 2.2- ACTIVIDADES",
+    "hotelFeatures": "[traduzido] 2.3- SERVICIOS DEL HOTEL",
+    "roomFeatures": "[traduzido] 2.4- SERVICIOS DE LAS HABITACIONES",
+    "selectAll": "[traduzido] Seleccionar Todo",
+    "deselectAll": "[traduzido] Deseleccionar Todo"
   }
 }
