--- a/src/i18n/locales/pt/dashboard/rates-calculator.json
+++ b/src/i18n/locales/pt/dashboard/rates-calculator.json
@@ -1,9 +1,9 @@
 {
   "ratesCalculator": {
-    "utilities": "[PT] SERVICIOS",
-    "cleaning": "[PT] LIMPIEZA",
-    "meals": "[PT] COMIDAS",
-    "totalCost": "[PT] COSTE TOTAL",
-    "disclaimer": "[PT] Estas cifras representan un ejemplo de los costes incrementales medios por habitación ocupada adicional en hoteles de 3, 4 y 5 estrellas en mercados occidentales. Los costes reales pueden variar y deben ajustarse en función de la categoría, nivel de servicio, ubicación y modelo operativo de cada hotel."
+    "utilities": "[traduzido] SERVICIOS",
+    "cleaning": "[traduzido] LIMPIEZA",
+    "meals": "[traduzido] COMIDAS",
+    "totalCost": "[traduzido] COSTE TOTAL",
+    "disclaimer": "[traduzido] Estas cifras representan un ejemplo de los costes incrementales medios por habitación ocupada adicional en hoteles de 3, 4 y 5 estrellas en mercados occidentales. Los costes reales pueden variar y deben ajustarse en función de la categoría, nivel de servicio, ubicación y modelo operativo de cada hotel."
   }
 }
