--- a/src/i18n/locales/pt/misc.json
+++ b/src/i18n/locales/pt/misc.json
@@ -1,160 +1,160 @@
 {
   "hotel": {
-    "details": "[PT] Detalles del hotel",
-    "amenities": "[PT] Servicios",
-    "location": "[PT] Ubicación",
-    "reviews": "[PT] Reseñas",
-    "photos": "[PT] Fotos",
-    "description": "[PT] Descripción",
-    "features": "[PT] Características",
-    "policies": "[PT] Políticas",
-    "contact": "[PT] Información de contacto",
-    "checkAvailability": "[PT] Verificar disponibilidad",
-    "hotelDetails": "[PT] Detalles del hotel",
-    "availability": "[PT] Disponibilidad",
-    "selectRoom": "[PT] Seleccionar habitación",
-    "roomType": "[PT] Tipo de habitación",
-    "pricePerNight": "[PT] Precio por noche",
-    "totalStayPrice": "[PT] Precio total de la estancia",
-    "bookNow": "[PT] Reservar ahora",
-    "contactHotel": "[PT] Contactar con el hotel"
+    "details": "[traduzido] Detalles del hotel",
+    "amenities": "[traduzido] Servicios",
+    "location": "[traduzido] Ubicación",
+    "reviews": "[traduzido] Reseñas",
+    "photos": "[traduzido] Fotos",
+    "description": "[traduzido] Descripción",
+    "features": "[traduzido] Características",
+    "policies": "[traduzido] Políticas",
+    "contact": "[traduzido] Información de contacto",
+    "checkAvailability": "[traduzido] Verificar disponibilidad",
+    "hotelDetails": "[traduzido] Detalles del hotel",
+    "availability": "[traduzido] Disponibilidad",
+    "selectRoom": "[traduzido] Seleccionar habitación",
+    "roomType": "[traduzido] Tipo de habitación",
+    "pricePerNight": "[traduzido] Precio por noche",
+    "totalStayPrice": "[traduzido] Precio total de la estancia",
+    "bookNow": "[traduzido] Reservar ahora",
+    "contactHotel": "[traduzido] Contactar con el hotel"
   },
   "forms": {
-    "required": "[PT] Este campo es obligatorio",
-    "invalidEmail": "[PT] Por favor ingresa un correo electrónico válido",
-    "passwordTooShort": "[PT] La contraseña debe tener al menos 8 caracteres",
-    "passwordsDoNotMatch": "[PT] Las contraseñas no coinciden",
-    "pleaseWait": "[PT] Por favor espera...",
-    "successMessage": "[PT] ¡Éxito!",
-    "errorMessage": "[PT] Ocurrió un error",
-    "requiredField": "[PT] Este campo es obligatorio",
-    "invalidPhoneNumber": "[PT] Número de teléfono inválido",
-    "invalidDate": "[PT] Fecha inválida",
-    "invalidNumber": "[PT] Número inválido",
-    "maxLengthExceeded": "[PT] Se ha superado la longitud máxima permitida",
-    "minLengthRequired": "[PT] Se requiere una longitud mínima"
+    "required": "[traduzido] Este campo es obligatorio",
+    "invalidEmail": "[traduzido] Por favor ingresa un correo electrónico válido",
+    "passwordTooShort": "[traduzido] La contraseña debe tener al menos 8 caracteres",
+    "passwordsDoNotMatch": "[traduzido] Las contraseñas no coinciden",
+    "pleaseWait": "[traduzido] Por favor espera...",
+    "successMessage": "[traduzido] ¡Éxito!",
+    "errorMessage": "[traduzido] Ocurrió un error",
+    "requiredField": "[traduzido] Este campo es obligatorio",
+    "invalidPhoneNumber": "[traduzido] Número de teléfono inválido",
+    "invalidDate": "[traduzido] Fecha inválida",
+    "invalidNumber": "[traduzido] Número inválido",
+    "maxLengthExceeded": "[traduzido] Se ha superado la longitud máxima permitida",
+    "minLengthRequired": "[traduzido] Se requiere una longitud mínima"
   },
   "filters": {
-    "all": "[PT] Todo",
-    "country": "[PT] País",
-    "city": "[PT] Ciudad",
-    "price": "[PT] Precio",
-    "stars": "[PT] Estrellas",
-    "property": "[PT] Tipo de propiedad",
-    "amenities": "[PT] Servicios",
-    "themes": "[PT] Temas",
-    "clearAll": "[PT] Limpiar todo",
-    "apply": "[PT] Aplicar filtros",
-    "filterBy": "[PT] Filtrar por",
-    "priceRange": "[PT] Rango de precios",
-    "availability": "[PT] Disponibilidad"
+    "all": "[traduzido] Todo",
+    "country": "[traduzido] País",
+    "city": "[traduzido] Ciudad",
+    "price": "[traduzido] Precio",
+    "stars": "[traduzido] Estrellas",
+    "property": "[traduzido] Tipo de propiedad",
+    "amenities": "[traduzido] Servicios",
+    "themes": "[traduzido] Temas",
+    "clearAll": "[traduzido] Limpiar todo",
+    "apply": "[traduzido] Aplicar filtros",
+    "filterBy": "[traduzido] Filtrar por",
+    "priceRange": "[traduzido] Rango de precios",
+    "availability": "[traduzido] Disponibilidad"
   },
   "admin": {
-    "adminDashboard": "[PT] Panel de administración",
-    "manageUsers": "[PT] Gestionar usuarios",
-    "manageHotels": "[PT] Gestionar hoteles",
-    "siteSettings": "[PT] Configuración del sitio",
-    "reports": "[PT] Informes",
-    "moderation": "[PT] Moderación",
-    "logs": "[PT] Registros",
-    "systemStatus": "[PT] Estado del sistema",
-    "database": "[PT] Base de datos"
+    "adminDashboard": "[traduzido] Panel de administración",
+    "manageUsers": "[traduzido] Gestionar usuarios",
+    "manageHotels": "[traduzido] Gestionar hoteles",
+    "siteSettings": "[traduzido] Configuración del sitio",
+    "reports": "[traduzido] Informes",
+    "moderation": "[traduzido] Moderación",
+    "logs": "[traduzido] Registros",
+    "systemStatus": "[traduzido] Estado del sistema",
+    "database": "[traduzido] Base de datos"
   },
   "notifications": {
-    "newBooking": "[PT] Nueva reserva",
-    "bookingCancelled": "[PT] Reserva cancelada",
-    "paymentReceived": "[PT] Pago recibido",
-    "paymentFailed": "[PT] Pago fallido",
-    "profileUpdated": "[PT] Perfil actualizado",
-    "passwordChanged": "[PT] Contraseña cambiada",
-    "newMessage": "[PT] Nuevo mensaje",
-    "systemUpdate": "[PT] Actualización del sistema"
+    "newBooking": "[traduzido] Nueva reserva",
+    "bookingCancelled": "[traduzido] Reserva cancelada",
+    "paymentReceived": "[traduzido] Pago recibido",
+    "paymentFailed": "[traduzido] Pago fallido",
+    "profileUpdated": "[traduzido] Perfil actualizado",
+    "passwordChanged": "[traduzido] Contraseña cambiada",
+    "newMessage": "[traduzido] Nuevo mensaje",
+    "systemUpdate": "[traduzido] Actualización del sistema"
   },
   "errors": {
-    "pageNotFound": "[PT] Página no encontrada",
-    "internalServerError": "[PT] Error interno del servidor",
-    "unauthorized": "[PT] No autorizado",
-    "forbidden": "[PT] Acceso prohibido",
-    "badRequest": "[PT] Solicitud incorrecta",
-    "serviceUnavailable": "[PT] Servicio no disponible",
-    "unknownError": "[PT] Error desconocido"
+    "pageNotFound": "[traduzido] Página no encontrada",
+    "internalServerError": "[traduzido] Error interno del servidor",
+    "unauthorized": "[traduzido] No autorizado",
+    "forbidden": "[traduzido] Acceso prohibido",
+    "badRequest": "[traduzido] Solicitud incorrecta",
+    "serviceUnavailable": "[traduzido] Servicio no disponible",
+    "unknownError": "[traduzido] Error desconocido"
   },
   "payments": {
-    "paymentMethod": "[PT] Método de pago",
-    "cardNumber": "[PT] Número de tarjeta",
-    "cardHolder": "[PT] Titular de la tarjeta",
-    "expirationDate": "[PT] Fecha de expiración",
-    "cvv": "[PT] CVV",
-    "billingAddress": "[PT] Dirección de facturación",
-    "payNow": "[PT] Pagar ahora",
-    "paymentSuccess": "[PT] Pago realizado con éxito",
-    "paymentError": "[PT] Error en el pago"
+    "paymentMethod": "[traduzido] Método de pago",
+    "cardNumber": "[traduzido] Número de tarjeta",
+    "cardHolder": "[traduzido] Titular de la tarjeta",
+    "expirationDate": "[traduzido] Fecha de expiración",
+    "cvv": "[traduzido] CVV",
+    "billingAddress": "[traduzido] Dirección de facturación",
+    "payNow": "[traduzido] Pagar ahora",
+    "paymentSuccess": "[traduzido] Pago realizado con éxito",
+    "paymentError": "[traduzido] Error en el pago"
   },
   "marketing": {
-    "tagline": "[PT] Revoluciona tu forma de vivir",
-    "subTagline": "[PT] Hoteles con grupos temáticos, estancias flexibles, experiencias únicas",
-    "callToAction": "[PT] Descubre cómo funciona Hotel-Living",
-    "startNow": "[PT] Comienza ahora",
-    "learnMore": "[PT] Saber más",
-    "joinUs": "[PT] Únete a nosotros",
-    "partnerships": "[PT] Asociaciones estratégicas",
-    "affiliateProgram": "[PT] Programa de afiliados"
+    "tagline": "[traduzido] Revoluciona tu forma de vivir",
+    "subTagline": "[traduzido] Hoteles con grupos temáticos, estancias flexibles, experiencias únicas",
+    "callToAction": "[traduzido] Descubre cómo funciona Hotel-Living",
+    "startNow": "[traduzido] Comienza ahora",
+    "learnMore": "[traduzido] Saber más",
+    "joinUs": "[traduzido] Únete a nosotros",
+    "partnerships": "[traduzido] Asociaciones estratégicas",
+    "affiliateProgram": "[traduzido] Programa de afiliados"
   },
   "legal": {
-    "termsOfService": "[PT] Términos del servicio",
-    "privacyPolicy": "[PT] Política de privacidad",
-    "cookiePolicy": "[PT] Política de cookies",
-    "legalDisclaimer": "[PT] Aviso legal",
-    "userAgreement": "[PT] Acuerdo de usuario"
+    "termsOfService": "[traduzido] Términos del servicio",
+    "privacyPolicy": "[traduzido] Política de privacidad",
+    "cookiePolicy": "[traduzido] Política de cookies",
+    "legalDisclaimer": "[traduzido] Aviso legal",
+    "userAgreement": "[traduzido] Acuerdo de usuario"
   },
   "support": {
-    "contactSupport": "[PT] Contactar con Ayuda",
-    "supportCenter": "[PT] Centro de Ayuda",
-    "submitTicket": "[PT] Enviar solicitud",
-    "trackTicket": "[PT] Rastrear solicitud",
-    "knowledgeBase": "[PT] Archivo Informativo",
-    "communityForum": "[PT] Foro de la comunidad",
-    "liveChat": "[PT] Chat en vivo"
+    "contactSupport": "[traduzido] Contactar con Ayuda",
+    "supportCenter": "[traduzido] Centro de Ayuda",
+    "submitTicket": "[traduzido] Enviar solicitud",
+    "trackTicket": "[traduzido] Rastrear solicitud",
+    "knowledgeBase": "[traduzido] Archivo Informativo",
+    "communityForum": "[traduzido] Foro de la comunidad",
+    "liveChat": "[traduzido] Chat en vivo"
   },
   "videos": {
-    "videosTitle": "[PT] Videos explicativos",
-    "watchNow": "[PT] Ver ahora",
-    "videoLibrary": "[PT] Biblioteca de videos",
-    "featuredVideos": "[PT] Videos destacados",
-    "tutorials": "[PT] Tutoriales"
+    "videosTitle": "[traduzido] Videos explicativos",
+    "watchNow": "[traduzido] Ver ahora",
+    "videoLibrary": "[traduzido] Biblioteca de videos",
+    "featuredVideos": "[traduzido] Videos destacados",
+    "tutorials": "[traduzido] Tutoriales"
   },
   "onboarding": {
-    "welcomeTitle": "[PT] Bienvenido a Hotel-Living",
-    "getStarted": "[PT] Comenzar",
-    "completeProfile": "[PT] Completa tu perfil",
-    "addProperty": "[PT] Añadir propiedad",
-    "setupPricing": "[PT] Configurar precios",
-    "publishListing": "[PT] Publicar anuncio"
+    "welcomeTitle": "[traduzido] Bienvenido a Hotel-Living",
+    "getStarted": "[traduzido] Comenzar",
+    "completeProfile": "[traduzido] Completa tu perfil",
+    "addProperty": "[traduzido] Añadir propiedad",
+    "setupPricing": "[traduzido] Configurar precios",
+    "publishListing": "[traduzido] Publicar anuncio"
   },
   "emails": {
-    "welcomeEmailSubject": "[PT] ¡Bienvenido a Hotel-Living!",
-    "bookingConfirmationSubject": "[PT] Confirmación de reserva",
-    "passwordResetSubject": "[PT] Restablecimiento de contraseña",
-    "paymentReceivedSubject": "[PT] Pago recibido",
-    "paymentFailedSubject": "[PT] Error en el pago",
-    "newsletterSubject": "[PT] Novedades de Hotel-Living"
+    "welcomeEmailSubject": "[traduzido] ¡Bienvenido a Hotel-Living!",
+    "bookingConfirmationSubject": "[traduzido] Confirmación de reserva",
+    "passwordResetSubject": "[traduzido] Restablecimiento de contraseña",
+    "paymentReceivedSubject": "[traduzido] Pago recibido",
+    "paymentFailedSubject": "[traduzido] Error en el pago",
+    "newsletterSubject": "[traduzido] Novedades de Hotel-Living"
   },
   "themes": {
-    "themesTitle": "[PT] Afinidades",
-    "chooseTheme": "[PT] Seleccionar afinidad",
-    "popularThemes": "[PT] Afinidades populares",
-    "createTheme": "[PT] Crear nueva afinidad",
-    "themeDetails": "[PT] Detalles de la afinidad"
+    "themesTitle": "[traduzido] Afinidades",
+    "chooseTheme": "[traduzido] Seleccionar afinidad",
+    "popularThemes": "[traduzido] Afinidades populares",
+    "createTheme": "[traduzido] Crear nueva afinidad",
+    "themeDetails": "[traduzido] Detalles de la afinidad"
   },
   "partners": {
-    "partnersTitle": "[PT] Nuestros colaboradores",
-    "becomePartner": "[PT] Conviértete en colaborador",
-    "partnerBenefits": "[PT] Beneficios para colaboradores",
-    "applyNow": "[PT] Solicitar ahora",
-    "contactPartnership": "[PT] Contactar para colaboraciones"
+    "partnersTitle": "[traduzido] Nuestros colaboradores",
+    "becomePartner": "[traduzido] Conviértete en colaborador",
+    "partnerBenefits": "[traduzido] Beneficios para colaboradores",
+    "applyNow": "[traduzido] Solicitar ahora",
+    "contactPartnership": "[traduzido] Contactar para colaboraciones"
   },
   "team": {
-    "meetOurTeam": "[PT] Conoce a nuestro equipo",
-    "teamIntroduction": "[PT] Nuestro equipo está formado por profesionales apasionados dedicados a revolucionar gran parte del modelo de vida global."
+    "meetOurTeam": "[traduzido] Conoce a nuestro equipo",
+    "teamIntroduction": "[traduzido] Nuestro equipo está formado por profesionales apasionados dedicados a revolucionar gran parte del modelo de vida global."
   }
 }
